Rooms CRUD & DB Mockup